# cmake-test

./: .gitignore  .gitmodules  CMakeLists.txt  PreLoad.cmake  main.cpp
contrib/: CMakeLists.txt
contrib/mimalloc-cmake/: CMakeLists.txt
lib/: CMakeLists.txt  hello.cpp  hello.h
